--- a/buildpacks/Dockerfile
+++ b/buildpacks/Dockerfile
@@ -1,5 +1,5 @@
-FROM packs/build
+FROM heroku/buildpacks
 
 COPY all.sh /scripts/all.sh
 
-ENTRYPOINT ['/scripts/all.sh']
+ENTRYPOINT ["/scripts/all.sh"]
